employeeAPI/f7996dce4ac15e2af0f8ee14546c4f72988eddae-production-httproute-1.yaml
---
apiVersion: "gateway.networking.k8s.io/v1beta1"
kind: "HTTPRoute"
metadata:
  name: "f7996dce4ac15e2af0f8ee14546c4f72988eddae-production-httproute-1"
  labels:
    api-name: "5c296e241ef56a5a40aaa473bfd2613954c9446d"
    api-version: "983b34771fb7185d04c9603559c9e46f4b70496d"
    organization: "7505d64a54e061b7acd54ccd58b49dc43500b635"
    managed-by: "apk"
spec:
  hostnames:
  - "default.gw.wso2.com"
  rules:
  - matches:
    - path:
        type: "RegularExpression"
        value: "/employee"
      method: "GET"
    filters:
    - type: "URLRewrite"
      urlRewrite:
        path:
          type: "ReplaceFullPath"
          replaceFullPath: "/employee"
    - type: "ExtensionRef"
      extensionRef:
        group: "dp.wso2.com"
        kind: "Authentication"
        name: "f7996dce4ac15e2af0f8ee14546c4f72988eddae-production-no-authentication"
    backendRefs:
    - group: "dp.wso2.com"
      kind: "Backend"
      name: "backend-93fa16a00dbec9ff438aa40e6358d91dcdc22f48-api"
  - matches:
    - path:
        type: "RegularExpression"
        value: "/employee"
      method: "POST"
    filters:
    - type: "URLRewrite"
      urlRewrite:
        path:
          type: "ReplaceFullPath"
          replaceFullPath: "/employee"
    backendRefs:
    - group: "dp.wso2.com"
      kind: "Backend"
      name: "backend-93fa16a00dbec9ff438aa40e6358d91dcdc22f48-api"
  - matches:
    - path:
        type: "RegularExpression"
        value: "/employee/(.*)"
      method: "PUT"
    filters:
    - type: "URLRewrite"
      urlRewrite:
        path:
          type: "ReplaceFullPath"
          replaceFullPath: "/employee/\\1"
    backendRefs:
    - group: "dp.wso2.com"
      kind: "Backend"
      name: "backend-93fa16a00dbec9ff438aa40e6358d91dcdc22f48-api"
  - matches:
    - path:
        type: "RegularExpression"
        value: "/employee/(.*)"
      method: "DELETE"
    filters:
    - type: "URLRewrite"
      urlRewrite:
        path:
          type: "ReplaceFullPath"
          replaceFullPath: "/employee/\\1"
    backendRefs:
    - group: "dp.wso2.com"
      kind: "Backend"
      name: "backend-93fa16a00dbec9ff438aa40e6358d91dcdc22f48-api"
  parentRefs:
  - group: "gateway.networking.k8s.io"
    kind: "Gateway"
    name: "default"
    sectionName: "httpslistener"
